--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "langchain": "^0.3.36",
     "lucide-react": "^0.546.0",
     "next": "15.5.4",
+    "nodemailer": "^7.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "swiper": "^12.0.3"
