--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
+    "@tosspayments/payment-sdk": "^1.9.2",
     "langchain": "^0.3.36",
     "lucide-react": "^0.546.0",
     "next": "15.5.4",
