--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "crons": [
     {
-      "path": "/api/subscription/charge",
-      "schedule": "0 9 * * *"
+      "path": "/api/subscription/cron",
+      "schedule": "0 0 * * *"
     }
   ]
 }
