--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@tosspayments/payment-sdk": "^1.9.2",
     "langchain": "^0.3.36",
     "lucide-react": "^0.546.0",
-    "next": "15.5.4",
+    "next": "^16.0.7",
     "nodemailer": "^7.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -34,7 +34,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
